<resources>
    <string name="app_name">Raven Rank Boost</string>
    <string name="create_account"><u>CREATE ACCOUNT</u></string>
    <string name="already_signed_up"><u>ALREADY SIGNED UP?</u></string>
    <string name="manage_your_profile"><u>Manage your profile</u></string>
    <string name="i_agree_with_the_terms_conditions"><u><![CDATA[I agree with the terms of service]]></u></string>
    <string name="account_details"><u>ACCOUNT DETAILS :</u></string>
    <string name="reset"><u>RESET</u></string>
    <string name="terms_of_service"><u>TERMS OF SERVICE</u></string>
    <string name="privacy_notice"><u>PRIVACY NOTICE</u></string>
    <string name="detail_orders">DETAIL ORDERS :</string>
    <string name="if_you_need_help_about_anything_you_can_leave_the_message_using_email_or_whatsapp_with_the_button_bellow">If you need help about anything, you can leave the message using email or WhatsApp with the button bellow</string>
    <string name="email_us">EMAIL US</string>
    <string name="whatsapp_us">WHATSAPP US</string>
    <string name="new_order">New Order</string>
    <string name="list_order">List Order</string>
    <string name="notification">Notification</string>
    <string name="how_to_order">HOW TO ORDER</string>
    <string name="valorant_news">VALORANT NEWS</string>
    <string name="sign_out">SIGN OUT</string>
    <string name="we_will_boost_your_rank_as_you_wish_as_you_want">WE WILL BOOST YOUR RANK AS YOU WISH, AS YOU WANT</string>
    <string name="_100_money_back_guarantee">100% MONEY BACK GUARANTEE</string>
    <string name="username">USERNAME</string>
    <string name="password">PASSWORD</string>
    <string name="subtotal">SUBTOTAL :</string>
    <string name="idr_0">IDR 0,-</string>
    <string name="eta">ETA :</string>
    <string name="checkout">CHECKOUT</string>
    <string name="your_orders">YOUR ORDERS :</string>
    <string name="raven_rank_boost_terms_of_service">RAVEN RANK BOOST\nTERMS OF SERVICE</string>
    <string name="what_they_said_about_us">WHAT THEY SAID ABOUT OUR SERVICE</string>
</resources>