<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".View.NewOrder.NewOrderActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_vertical"
        android:orientation="vertical"
        android:padding="20dp">

        <ImageView
            android:id="@+id/ivBack"
            android:layout_width="50dp"
            android:layout_height="30dp"
            android:src="@drawable/black_back_button" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="170dp"
            android:layout_marginTop="20dp"
            android:src="@drawable/headt_text" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:fontFamily="@font/dinnextltpro_regular"
                android:text="@string/we_will_boost_your_rank_as_you_wish_as_you_want"
                android:textAlignment="center"
                android:textColor="#000"
                android:textSize="12sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:fontFamily="@font/dinnextltpro_bold"
                android:text="@string/_100_money_back_guarantee"
                android:textAlignment="center"
                android:textColor="#ff4654"
                android:textSize="12sp" />

            <Spinner
                android:id="@+id/spnCurrentRank"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/dropdown_box"
                android:focusableInTouchMode="true"
                android:popupBackground="@drawable/dropdown_box"
                android:scrollbars="vertical" />

            <Spinner
                android:id="@+id/spnWantedRank"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/dropdown_box" />

            <EditText
                android:id="@+id/etUsername"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_marginTop="15dp"
                android:background="@drawable/radius_edittext_signin"
                android:fontFamily="@font/dinnextltpro_bold"
                android:gravity="center_vertical"
                android:hint="@string/username"
                android:inputType="text"
                android:padding="15dp"
                android:textSize="12sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/etPassword"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_marginTop="15dp"
                android:background="@drawable/radius_edittext_signin"
                android:fontFamily="@font/dinnextltpro_bold"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:padding="15dp"
                android:textSize="12sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:fontFamily="@font/dinnextltpro_bold"
                android:text="@string/subtotal"
                android:textColor="#000"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/tvPrice"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/dinnextltpro_regular"
                android:text="@string/idr_0"
                android:textColor="#000"
                android:textSize="24sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/dinnextltpro_bold"
                android:text="@string/eta"
                android:textColor="#000"
                android:textSize="18sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/dinnextltpro_regular"
                android:text="7 work days"
                android:textColor="#000"
                android:textSize="24sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="25dp"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/cbTerm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:buttonTint="#adadad"
                android:theme="@style/checkBoxTheme" />

            <TextView
                android:id="@+id/tvTerms"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:fontFamily="@font/dinnextltpro_bold"
                android:text="@string/i_agree_with_the_terms_conditions"
                android:textColor="@color/textColor"
                android:textSize="12sp" />


        </LinearLayout>

        <Button
            android:id="@+id/btCheckout"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginHorizontal="30dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/button_checkout"
            android:fontFamily="@font/dinnextltpro_bold"
            android:text="@string/checkout" />

    </LinearLayout>
</ScrollView>