<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".View.ContactCenterActivity">

    <ImageView
        android:id="@+id/btBack"
        android:layout_width="50dp"
        android:layout_height="30dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp"
        android:src="@drawable/back_button"
        app:tint="#000" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:src="@drawable/head_cover_contact_us" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="72dp"
            android:src="@drawable/head_text_contact_us" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:textColor="#000"
            android:layout_marginTop="20dp"
            android:textAlignment="center"
            android:fontFamily="@font/dinnextltpro_regular"
            android:text="@string/if_you_need_help_about_anything_you_can_leave_the_message_using_email_or_whatsapp_with_the_button_bellow"/>

        <RelativeLayout
            android:id="@+id/btEmail"
            android:layout_marginTop="65dp"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/email_button">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/email_us"
                android:fontFamily="@font/dinnextltpro_bold"
                android:textColor="#fff"
                android:textAlignment="center"
                android:layout_centerInParent="true"/>

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/btWA"
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/whatsapp_button">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/whatsapp_us"
                android:fontFamily="@font/dinnextltpro_bold"
                android:textColor="#fff"
                android:textAlignment="center"
                android:layout_centerInParent="true"/>

        </RelativeLayout>
    </LinearLayout>

</LinearLayout>