<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff"
    tools:context=".View.Dashboard.DashboardActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="240dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="240dp">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="210dp"
                    android:scaleType="fitXY"
                    android:src="@drawable/head_cover_dashboard" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="50dp"
                    android:layout_marginHorizontal="30dp">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/tvDate"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="10dp"
                            android:fontFamily="@font/dinnextltpro_regular"
                            android:text="11 November 2020"
                            android:textColor="#fff"
                            android:textSize="14sp" />

                        <TextView
                            android:id="@+id/tvGood"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/dinnextltpro_bold"
                            android:text="GOOD AFTERNOON,"
                            android:textColor="#fff"
                            android:textSize="20sp" />

                        <TextView
                            android:id="@+id/tvName"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/dinnextltpro_bold"
                            android:text="arron2501!"
                            android:textColor="#fff"
                            android:textSize="20sp" />

                        <TextView
                            android:id="@+id/tvManage"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:fontFamily="@font/dinnextltpro_regular"
                            android:text="@string/manage_your_profile"
                            android:textColor="#fff"
                            android:textSize="12sp" />
                    </LinearLayout>

                    <ImageView
                        android:layout_width="121dp"
                        android:layout_height="100dp"
                        android:layout_alignParentEnd="true"
                        android:src="@drawable/head_cover_logo" />
                </RelativeLayout>
                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_alignParentBottom="true"
                    android:layout_marginBottom="5dp"
                    android:elevation="10dp"
                    app:cardCornerRadius="5dp"
                    android:layout_marginHorizontal="30dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="60dp"
                        android:elevation="10dp"
                        android:layout_alignParentBottom="true"
                        android:background="@drawable/layout_radius_with_shadow"
                        android:backgroundTint="#fff"
                        android:orientation="horizontal">

                        <LinearLayout
                            android:id="@+id/btNewOrder"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:layout_gravity="center_vertical"
                            android:orientation="vertical">

                            <ImageView
                                android:layout_width="match_parent"
                                android:layout_height="25dp"
                                android:src="@drawable/button_new_order"/>
                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/new_order"
                                android:textSize="12sp"
                                android:layout_marginTop="5dp"
                                android:textAlignment="center"
                                android:fontFamily="@font/dinnextltpro_regular"
                                android:textColor="#000"/>
                        </LinearLayout>

                        <LinearLayout
                            android:id="@+id/btListOrder"
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:orientation="vertical">

                            <ImageView
                                android:layout_width="match_parent"
                                android:layout_height="25dp"
                                android:src="@drawable/button_list_order"/>
                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="5dp"
                                android:text="@string/list_order"
                                android:textAlignment="center"
                                android:textSize="12sp"
                                android:fontFamily="@font/dinnextltpro_regular"
                                android:textColor="#000"/>
                        </LinearLayout>
                        <LinearLayout
                            android:id="@+id/btNotification"
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:orientation="vertical">

                            <ImageView
                                android:layout_width="match_parent"
                                android:layout_height="25dp"
                                android:src="@drawable/button_notification"/>
                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/notification"
                                android:layout_marginTop="5dp"
                                android:textAlignment="center"
                                android:textSize="12sp"
                                android:fontFamily="@font/dinnextltpro_regular"
                                android:textColor="#000"/>
                        </LinearLayout>

                    </LinearLayout>


                </androidx.cardview.widget.CardView>

            </RelativeLayout>
        </FrameLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/how_to_order"
            android:fontFamily="@font/dinnextltpro_black"
            android:textColor="#000"
            android:textSize="24sp"
            android:layout_marginTop="20dp"
            android:layout_marginHorizontal="30dp"/>
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvOrder"
            android:layout_marginHorizontal="30dp"
            android:layout_width="match_parent"
            android:layout_height="220dp"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/valorant_news"
            android:fontFamily="@font/dinnextltpro_black"
            android:textColor="#000"
            android:textSize="24sp"
            android:layout_marginTop="20dp"
            android:layout_marginHorizontal="30dp"/>
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvNews"
            android:layout_width="match_parent"
            android:layout_height="220dp"
            android:layout_marginHorizontal="30dp"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/what_they_said_about_us"
            android:fontFamily="@font/dinnextltpro_black"
            android:textColor="#000"
            android:textSize="24sp"
            android:layout_marginTop="20dp"
            android:layout_marginHorizontal="30dp"/>
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvTesti"
            android:layout_width="match_parent"
            android:layout_height="220dp"
            android:layout_marginHorizontal="30dp"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"/>

    </LinearLayout>
</ScrollView>